--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
+    "groq": "^2.33.2",
+    "gsap": "^3.11.3",
     "module-name": "^0.0.1-security",
+    "motion": "^10.14.2",
     "pinia": "^2.0.22",
+    "url": "^0.11.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
     "vue-sanity": "^0.12.0"
   },
   "devDependencies": {
+    "@types/node": "^18.8.3",
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
